<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Furniture e-Shop</string>
<string name="select_model_file">Select a model file:</string>
<string name="android_markt_not_avail">Android market is not available, you need install to OI File manager manually.</string>
<string name="pickfile_intent_required">You need to install the OI File Manager in order to use this application.</string>
<string name="file_doesnt_exist">This file doesn\'t exist!</string>
<string name="unknown_file_type">Unknown file type!</string>
<string name="rotate">rotate</string>
<string name="translate">translate</string>
<string name="scale">scale</string>

    <string name="label_account">Account</string>
    <string name="label_camera">Camera</string>
    <string name="label_camera_allow_access">You need to allow access to Camera</string>
    <string name="label_camera_deny">Camera Denied</string>
    <string name="label_cart">My Cart</string>
    <string name="label_cash_on_delivery">Duit kasi mari. Cepat! Cepat!</string>
    <string name="label_checkout">PROCEED TO CHECKOUT</string>
    <string name="label_coming_soon">Coming Soon</string>
    <string name="label_credit_card_number">Credit Card Number</string>
    <string name="label_expire_date">Expire Date (MM/YY)</string>
    <string name="label_home">Home</string>
    <string name="label_my_cart">My Cart</string>
    <string name="label_name_on_credit_card">Name On Credit Card</string>
    <string name="label_order">Order</string>
    <string name="label_secure_checkout">Secure Checkout</string>
    <string name="label_thank_you">Thank you for the payment</string>
    <string name="label_users">Hi, Vincent</string>

<string name="loading">Loading. Please wait...</string>
<string name="app_description">AndAR Model Viewer allows you to view wavefront obj models on an Augmented Reality marker.</string>
<string name="take_screenshot">Take a screenshot</string><string name="screenshotsaved">Screenshot saved!</string><string name="screenshotfailed">Failed to save screenshot: </string>
<string name="choose_custom_model">Select a model file</string>
<string name="instructions">Instructions</string>
<string name="wrong_file">Select an obj model file. (.obj)</string>
<string name="choose_a_model">Choose a model:</string>
<string name="help">Help:</string>
<string name="custom_model">Custom model:</string>
<string name="help_file">index.html</string>
</resources>
